--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<html>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded arjs>
+      <a-marker preset="hiro">
+       <a-entity 
+      obj-model="obj: url(/obj/10014_dolphin_v2_max2011_it2.obj); 
+      mtl: url(/obj/10014_dolphin_v2_max2011_it2.mtl)" scale="0.05 0.05 0.05" rotation="-90 0 0">
+      </a-entity>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
+</html>
 
